--- a/index.html
+++ b/index.html
@@ -246,7 +246,7 @@
               <article class="product">
                   <div class="product-body">
                       <div class="product-figure">
-                          <div class="new-img-container" style="background-image: url('images/_IV_9676-min_1.png');"></div>
+                          <div class="new-img-container" style="background-image: url('../images/_IV_9676-min_1.png');"></div>
                       </div>
                       <h5 class="product-title"><a href="#">Medus su mėlynėmis</a></h5>
                       <p class="product-weight">45 g.&nbsp;/&nbsp;115 g.</p>
@@ -263,7 +263,7 @@
               <article class="product wow fadeInRight" data-wow-delay=".2s">
                   <div class="product-body">
                       <div class="product-figure">
-                          <div class="new-img-container" style="background-image: url('images/_IV_9677-min_1.png');"></div>
+                          <div class="new-img-container" style="background-image: url('../images/_IV_9677-min_1.png');"></div>
                       </div>
                       <h5 class="product-title"><a href="#">Medus su mėtomis</a></h5>
                       <p class="product-weight">125 g.&nbsp;/&nbsp;230 g.</p>
@@ -280,7 +280,7 @@
               <article class="product wow fadeInRight" data-wow-delay=".2s">
                   <div class="product-body">
                       <div class="product-figure">
-                          <div class="new-img-container" style="background-image: url('images/_IV_9679-min_1.png');"></div>
+                          <div class="new-img-container" style="background-image: url('../images/_IV_9679-min_1.png');"></div>
                       </div>
                       <h5 class="product-title"><a href="#">Medus su čiobreliais</a></h5>
                       <p class="product-weight">125 g.&nbsp;/&nbsp;230 g.</p>
@@ -297,7 +297,7 @@
               <article class="product wow fadeInRight" data-wow-delay=".2s">
                   <div class="product-body">
                       <div class="product-figure">
-                          <div class="new-img-container" style="background-image: url('images/_IV_9681-min_1.png');"></div>
+                          <div class="new-img-container" style="background-image: url('../images/_IV_9681-min_1.png');"></div>
                       </div>
                       <h5 class="product-title"><a href="#">Medus su žemuogėmis</a></h5>
                       <p class="product-weight">125 g.&nbsp;/&nbsp;230 g.</p>
